sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: ')' expected but '}' found.
  }
  ^